[package]
name = "gem"
version = "0.1.3"
edition = "2021"
authors = ["wildonion <abarmardeatashyne@gmail.com>"]
description = "Conse Rust Backend Services"
homepage = "https://github.com/wildonion/gem/"
keywords = ["game", "web", "app", "rust", "crypto", "blockchain"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wildonion/gem/"


[dependencies]
async-std = "1.12.0"
futures = "0.3"
futures-util = "0.3"
rayon = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tokio-rustls = "0.24"
rustls = "0.21"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream", "multipart"] }
actix-redis = "0.13.0"
actix-session = { version = "0.8", features = ["redis-actor-session"] }
actix = "0.13"
actix-cors = "0.6.4"
actix-web = { version = "4", features = ["openssl"] }
actix-multipart = "0.6"
actix-web-actors = "4.2.0"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel-derive-enum = { version = "2", features = ["postgres"] }
redis = { version = "0.23", features = ["tokio-comp", "cluster-async", "json"] }
redis-async = "0.16.1"
mongodb = "2"
uuid = { version = "1", features = ["serde", "v4"] }
borsh = "1.1"
serde_json = "1"
pretty_env_logger = "0.5"
env_logger = "0.10.0"
jsonwebtoken = "9"
rs-snowflake = "*"
base64 = "0.21"
rand = "0.8"
rust-argon2 = "2"
sha2 = "0.10"
secp256k1 = { version = "0.27", features = ["rand", "bitcoin-hashes-std"] }
tiny-keccak = "1.4"
web3 = "0.19.0"
bytes = { version = "1", features = ["serde"] }
hex = "0.4"
dotenv = "0.15"
log = "0.4"
lazy_static = "1"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
routerify-cors = "3"
routerify = "3"
sanitize-filename = "0.5"
async-trait = "0.1"
once_cell = "1"
sysinfo = "0.29"
tokio-cron-scheduler = "0.9.4"
openssl = { version = "0.10", features = ["v110"] }
twitter-v2 = "0.1.8"
syn = { version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"
libloading = "0.8.0"
lettre = { version = "0.10", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
wallexerr = "0.2.3"
serenity = "0.11.7"
percentage = "0.1.0"


[lib]
proc-macro = true
path = "core/panel/lib.rs"
name = "panel_macros"

[[bin]]
name = "rendezvous"
path = "core/rendezvous/app.rs"

[[bin]]
name = "panel"
path = "core/panel/app.rs"

[[bin]]
name = "xcord"
path = "core/xcord/src/bot.rs"

[[bin]]
name = "contest"
path = "test/tests.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow
