[package]
name = "gem"
version = "2.0.0"
edition = "2021"
authors = ["wildonion <abarmardeatashyne@gmail.com>"]
description = "Conse Rust Engines"
homepage = "https://github.com/wildonion/gem/"
keywords = ["game", "web", "app", "rust", "crypto", "blockchain"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wildonion/gem/"

[workspace]
members = [ 
  "core/walletreq",
  "core/mailreq",
  "core/phonereq",
  "core/s3req",
  "core/multipartreq",
  "core/gastracker"
]
exclude = ["core/chatdb"]


[dependencies]
walletreq = { path = "core/walletreq", name = "walletreq"}
mailreq = { path = "core/mailreq", name = "mailreq"}
phonereq = { path = "core/phonereq", name = "phonereq"}
s3req = { path = "core/s3req", name = "s3req"}
multipartreq = { path = "core/multipartreq", name = "multipartreq" }
gastracker = { path = "core/gastracker", name = "gastracker" }
async-std = "1"
futures = "0.3"
futures-util = "0.3"
tonic = "0.10.2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.25"
rustls = "0.22"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream", "multipart"] }
actix-redis = "0.13.0"
actix-session = { version = "0.9", features = ["redis-actor-session"] }
actix = "0.13"
actix-cors = "0.7"
actix-web = { version = "4", features = ["openssl"] }
actix-multipart = "0.6"
actix-web-actors = "4.3"
actix-broker = "0.4.3"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json", "64-column-tables"] }
diesel-derive-enum = { version = "2", features = ["postgres"] }
redis = { version = "0.23.3", features = ["tokio-comp", "cluster-async", "json"] }
redis-async = "0.16"
mongodb = "2"
uuid = { version = "1", features = ["serde", "v4"] }
borsh = "1"
serde_json = "1"
pretty_env_logger = "0.5"
env_logger = "0.11"
jsonwebtoken = "9"
rs-snowflake = "*"
rand = "0.8"
rust-argon2 = "2"
sha2 = "0.10"
bytes = { version = "1", features = ["serde"] }
hex = "0.4"
dotenv = "0.15"
log = "0.4"
lazy_static = "1"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
routerify-cors = "3"
routerify = "3"
sanitize-filename = "0.5"
async-trait = "0.1"
once_cell = "1"
sysinfo = "0.30"
cron = "0.12"
openssl = { version = "0.10", features = ["v110"] }
syn = { version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
serenity = "0.11.7"
percentage = "0.1.0"
prost = "0.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.12"
spacetimedb-sdk = "0.8"
sqlx = { version = "0.7", features = [ 
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "migrate",
  "json",
  "uuid"
  ]}
trait-variant = "0.1.1"
async-openai = "0.18.3"
thiserror = "1.0"
cached = "0.49.2"

[lib]
proc-macro = true
path = "core/panel/plugins.rs"
name = "panel_macros"

[[bin]]
name = "rendezvous"
path = "core/rendezvous/app.rs"

[[bin]]
name = "panel"
path = "core/panel/app.rs"

[[bin]]
name = "xcord"
path = "core/xcord/src/bot.rs"

[[bin]]
name = "grpc"
path = "core/grpc/src/app.rs"

[[bin]]
name = "contest"
path = "test/tests.rs"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true # panic on any overflow

[build]
rustflags = ["-Z", "threads=10"]

[build-dependencies]
tonic-build = "0.10.2"
