[package]
name = "clients"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.25"
async-std = "1"
futures = "0.3"
futures-util = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
borsh = "1"
serde_json = "1"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
tonic = "0.10.2"


[[bin]]
name = "clients"
path = "src/main.rs"