[package]
name = "gastracker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tokio-rustls = "0.24"
rustls = "0.21"
reqwest = { version = "0.11", features = ["json", "blocking", "stream", "multipart"] }
actix = "0.13"
actix-web = { version = "4", features = ["openssl"] }
serde_json = "1"
pretty_env_logger = "0.5"
env_logger = "0.10.0"
dotenv = "0.15"
log = "0.4"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
openssl = { version = "0.10", features = ["v110"] }
redis = { version = "0.23", features = ["tokio-comp", "cluster-async", "json"] }

[lib]
name = "gastracker"
path = "src/lib.rs"