[package]
name = "multipartreq"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
actix = "0.13"
actix-web = { version = "4", features = ["openssl"] }
actix-multipart = "0.6"
serde_json = "1"
dotenv = "0.15"
log = "0.4"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sanitize-filename = "0.5"
bytes = { version = "1", features = ["serde"] }


[lib]
path = "src/lib.rs"
name = "multipartreq"