[package]
name = "phonereq"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream", "multipart"] }
actix-web = { version = "4", features = ["openssl"] }
pretty_env_logger = "0.5"
env_logger = "0.10.0"
dotenv = "0.15"
log = "0.4"
lazy_static = "1"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }


[lib]
path = "src/lib.rs"
name = "phonereq"
