[package]
name = "s3req"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream", "multipart"] }
actix-web = { version = "4", features = ["openssl"] }
pretty_env_logger = "0.5"
env_logger = "0.10.0"
dotenv = "0.15"
log = "0.4"
lazy_static = "1"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
actix-redis = "0.13.0"
actix = "0.13"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel-derive-enum = { version = "2", features = ["postgres"] }
redis = { version = "0.23", features = ["tokio-comp", "cluster-async", "json"] }
redis-async = "0.16.1"
mongodb = "2"
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = [ 
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "migrate",
  "json",
  "uuid"
  ]}

[lib]
path = "src/lib.rs"
name = "s3req"
