[package]
name = "ticket"
version = "0.1.0"
description = "Conse Ticket Reservation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"] # this is needed for compiling to .wasm or .so
name = "ticket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
sdk = ["no-entrypoint", "rand", "anchor-client"] # these are the attributes that this feature needs
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.26.0"
percentage = "0.1.0"
anchor-client = { version = "0.26.0", optional = true } # this can be used for calling other program accounts methods inside another anchor solana program
rand = { version = "0.8", optional = true }
orao-solana-vrf = { path = "../orao-vrf/", default-features = false, features = ["cpi"] }
