[package]
name = "whitelist"
version = "0.1.0"
description = "Conse Burn To Whitelist"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whitelist"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
mpl-token-metadata = "1.8.5"