[package]
name = "whitelist"
version = "0.1.0"
description = "Conse Burn To Whitelist"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whitelist"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.27.0"
# use features = ["no-entrypoint"] to avoid the `#[global_allocator]` error: https://github.com/metaplex-foundation/metaplex/issues/722
mpl-token-metadata = { version="1.8.5", features = [ "no-entrypoint" ] }