[package]
name = "ticket"
version = "0.1.0"
description = "Conse Ticket Reservation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"] # this is needed for compiling to .wasm or .so
name = "ticket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.27.0"
percentage = "0.1.0"
